--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,9 @@
   background: -o-linear-gradient(left, #2B32B2, #1488CC);
   background: linear-gradient(to right, #2B32B2, #1488CC);  /* Chrome 10-25, Safari 5.1-6 */ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+.landing-grid {
+  background: #1488CC;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(left, #2B32B2, #1488CC);
+  background: -o-linear-gradient(left, #2B32B2, #1488CC);
+  background: linear-gradient(to right, #2B32B2, #1488CC);  /* Chrome 10-25, Safari 5.1-6 */ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
