--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,26 @@
   background: -o-linear-gradient(left, #2B32B2, #1488CC);
   background: linear-gradient(to right, #2B32B2, #1488CC);  /* Chrome 10-25, Safari 5.1-6 */ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+
+.header_color2 {
+  background: #1488CC;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(left, #2B32B2, #1488CC);
+  background: -o-linear-gradient(left, #2B32B2, #1488CC);
+  background: linear-gradient(to right, #2B32B2, #1488CC);  /* Chrome 10-25, Safari 5.1-6 */ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
 .landing-grid {
+  background: #1488CC;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(left, #2B32B2, #1488CC);
+  background: -o-linear-gradient(left, #2B32B2, #1488CC);
+  background: linear-gradient(to right, #2B32B2, #1488CC);  /* Chrome 10-25, Safari 5.1-6 */ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  text-align: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.landing-grid2 {
   background: #1488CC;  /* fallback for old browsers */
   background: -webkit-linear-gradient(left, #2B32B2, #1488CC);
   background: -o-linear-gradient(left, #2B32B2, #1488CC);
@@ -20,6 +39,19 @@
 .Smiley-img {
   height: 250px;
   padding-top: 5em;
+}
+.text-lysing {
+  background-color: black;
+  opacity: .8;
+  width: 55%;
+  margin: auto;
+  border-radius: 10px;
+}
+
+.text-lysing p {
+  color: white;
+  font-size: 20px;
+  padding: 1em;
 }
 
 .banner-text {
