--- a/src/Assets/scss/default.scss
+++ b/src/Assets/scss/default.scss
@@ -7,7 +7,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
-  
+
   code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
       monospace;
@@ -32,12 +32,12 @@ body {
     width: 100%;
     height: 100%;
   }
-  
+
   .Smiley-img {
     height: 250px;
     padding-top: 5em;
   }
-  
+
   .banner-text {
     background-color: black;
     opacity: .8;
@@ -45,17 +45,29 @@ body {
     margin: auto;
     border-radius: 10px;
   }
-  
+
   .banner-text h1 {
     font-size: 66px;
     font-weight: bold;
     color: white;
   }
-  
+
   .banner-text p {
     color: white;
     font-size: 20px;
     padding: 1em;
   }
-  
 
+  .lysing-text {
+    background-color: black;
+    opacity: .8;
+    width: 55%;
+    margin: auto;
+    border-radius: 10px;
+  }
+
+  .lysing-text p {
+    color: white;
+    font-size: 20px;
+    padding: 1em;
+  }
