--- a/src/Assets/scss/default.scss
+++ b/src/Assets/scss/default.scss
@@ -44,6 +44,20 @@
     padding: 1em;
   }
 
+  .lysing-text {
+    background-color: black;
+    opacity: .8;
+    width: 55%;
+    margin: auto;
+    border-radius: 10px;
+  }
+
+  .lysing-text p {
+    color: white;
+    font-size: 20px;
+    padding: 1em;
+  }
+
 
   .container-fluid {
       width: 100%;
