lagfaeringar, er ad byrja a About page

--- a/src/Assets/scss/default.scss
+++ b/src/Assets/scss/default.scss
@@ -6,6 +6,12 @@
     background: -o-linear-gradient(left, $darkBlue, $lightBlue);
     background: linear-gradient(to right, $darkBlue, $lightBlue);  /* Chrome 10-25, Safari 5.1-6 */ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   }
+
+  .main__content {
+    display: flex;
+    flex-direction: column;
+  }
+  
   .landing-grid {
     background: $lightBlue;  /* fallback for old browsers */
     background: -webkit-linear-gradient(left, $darkBlue, $lightBlue);
@@ -13,8 +19,6 @@
     background: linear-gradient(to right, $darkBlue, $lightBlue);  /* Chrome 10-25, Safari 5.1-6 */ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     text-align: center;
     position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     overflow: scroll;
