kominn med hrátt dowload, uses og suitcase

--- a/src/Assets/scss/default.scss
+++ b/src/Assets/scss/default.scss
@@ -108,3 +108,5 @@
 @import '../../components/SideDrawer/SideDrawer.scss';
 @import '../../components/Toolbar/Toolbar.scss';
 @import '../../components/Download/Download.scss';
+@import '../../components/Esuitcase/Esuitcase.scss';
+@import '../../components/Uses/Uses.scss';
