Smiley Uses tilbuin

--- a/src/Assets/scss/config.scss
+++ b/src/Assets/scss/config.scss
@@ -11,12 +11,19 @@ body {
       sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+
+    background: $lightBlue;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(left, $darkBlue, $lightBlue);
+    background: -o-linear-gradient(left, $darkBlue, $lightBlue);
+    background: linear-gradient(to right, $darkBlue, $lightBlue);  /* Chrome 10-25, Safari 5.1-6 */ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
   }
   
   code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
       monospace;
   }
+
 
 // Mixins
 @mixin translate($e) {
