--- a/src/Assets/scss/default.scss
+++ b/src/Assets/scss/default.scss
@@ -10,8 +10,12 @@
   .main__content {
     display: flex;
     flex-direction: column;
+    padding-top: 64px;
     width: 100%;
     height: 100%;
+
+    color: white;
+    
   }
   
   .landing-grid {
