--- a/src/components/Toolbar/Toolbar.scss
+++ b/src/components/Toolbar/Toolbar.scss
@@ -1,9 +1,15 @@
+@import '../../Assets/scss/config.scss';
+
 .toolbar {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    background: #521751;
+    background: black;  /* fallback for old browsers */
+    //background: -webkit-linear-gradient(left, $darkBlue, $lightBlue);
+    //background: -o-linear-gradient(left, $darkBlue, $lightBlue);
+    //background: linear-gradient(to right, $darkBlue, $lightBlue);  /* Chrome 10-25, Safari 5.1-6 */ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
     height: 56px;
   }
   
