--- a/src/Assets/scss/default.scss
+++ b/src/Assets/scss/default.scss
@@ -114,3 +114,4 @@
 @import '../../components/Download/Download.scss';
 @import '../../components/Esuitcase/Esuitcase.scss';
 @import '../../components/Uses/Uses.scss';
+@import '../../components/homepage.scss';
