--- a/src/components/Esuitcase/Esuitcase.scss
+++ b/src/components/Esuitcase/Esuitcase.scss
@@ -1,5 +1,5 @@
 .suitcase {
-    
+
     &__content {
         display: flex;
         flex-direction: column;
@@ -11,5 +11,21 @@
 
     &__section {
         width: 80%;
+    }
+
+    &__text {
+        border-radius: 25px;
+        background: black;
+        padding: 20px;
+    }
+
+    &__text a {
+        color: white;
+        text-decoration: none;
+    }
+
+    &__text a:hover,
+    &__text a:active {
+        color: #fa923f;
     }
 }
