--- a/src/components/Download/Download.scss
+++ b/src/components/Download/Download.scss
@@ -12,4 +12,28 @@
     &__section {
         width: 80%;
     }
+
+    &__text {
+        border-radius: 25px;
+        background: black;
+        padding: 20px;
+    }
+
+    &__text a {
+        color: white;
+        text-decoration: none;
+    }
+
+    &__text a:hover, 
+    &__text a:active {
+        color: #fa923f;
+    }
+
+    &__image {
+        display: flex;
+        max-width: 100%;
+        max-height: 200px;
+        margin-bottom: 10px;
+    }
+
 }
