--- a/src/components/Esuitcase/Esuitcase.scss
+++ b/src/components/Esuitcase/Esuitcase.scss
@@ -12,4 +12,20 @@
     &__section {
         width: 80%;
     }
+
+    &__text {
+        border-radius: 25px;
+        background: black;
+        padding: 20px;
+    }
+
+    &__text a {
+        color: white;
+        text-decoration: none;
+    }
+
+    &__text a:hover, 
+    &__text a:active {
+        color: #fa923f;
+    }
 }
